# Prism

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  config.py  docker-compose.yml  ecosystem.config.js  main.py  middleware.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/api/: v1.py
app/core/: exceptions.py  lifespan.py  logger.py  middleware.py
app/modules/docker/: service.py
app/modules/docker/routers/: containers.py  images.py
app/modules/pm2/: service.py
app/modules/pm2/routers/: __init__.py  actions.py  logs.py  manage.py
app/modules/system/: sampler.py
app/modules/system/routers/: __init__.py  cpu.py  disk.py  network.py  os.py  ram.py  uptime.py
models/: schema.py
routers/: api.py
routers/docker/: __init__.py  containers.py  images.py  stats.py
routers/pm2/: __init__.py  actions.py  logs.py  manage.py
routers/system/: __init__.py  cpu.py  disk.py  network.py  os.py  ram.py  uptime.py
services/: lifespan.py  logger.py  pm2_service.py  sampler.py  uptime.py
