[project]
name = "prism-api"
version = "1.0.0"
description = "API de monitoring système"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
    "psutil>=7.2.2",
    "py-cpuinfo>=9.0.0",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.13.1",
    "aiodocker>=0.7.2",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]